<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.refinitiv.asts</groupId>
    <artifactId>RUTAF-BDDTEST</artifactId>
    <version>1.0</version>
    <name>RUTAF-BDDTEST</name>
    <url>https://confluence.refinitiv.com/display/Morocco2020/QA+Automation+-+Auto</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.9</maven.compiler.source>
        <maven.compiler.target>1.9</maven.compiler.target>
        <cucumber.version>6.2.2</cucumber.version>
        <testng.version>7.1.0</testng.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <karate.version>0.9.6</karate.version>
        <rutaf.version>3.0</rutaf.version>
    </properties>
    <repositories>
        <repository>
            <id>bams-public.maven.global</id>
            <url>https://bams-aws.refinitiv.com/artifactory/public.maven.global</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>a203973.bams.maven.local</id>
            <url>https://bams-aws.refinitiv.com/artifactory/a203973.bams.maven.local</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>com.refinitiv.asts</groupId>
            <artifactId>RUTAF-BDD</artifactId>
            <version>${rutaf.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.intuit.karate</groupId>
            <artifactId>karate-apache</artifactId>
            <version>${karate.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.beust</groupId>
            <artifactId>jcommander</artifactId>
            <version>1.78</version>
        </dependency>
        <dependency>
            <groupId>tech.grasshopper</groupId>
            <artifactId>extentreports-cucumber6-adapter</artifactId>
            <version>2.5.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.12.0</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.11</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>4.4.14</version>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>5.3.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.api-client</groupId>
            <artifactId>google-api-client</artifactId>
            <version>1.23.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.oauth-client</groupId>
            <artifactId>google-oauth-client-jetty</artifactId>
            <version>1.23.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.apis</groupId>
            <artifactId>google-api-services-gmail</artifactId>
            <version>v1-rev83-1.23.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.api-client</groupId>
            <artifactId>google-api-client-jackson2</artifactId>
            <version>1.32.1</version>
        </dependency>
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>javax.mail-api</artifactId>
            <version>1.6.2</version>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>4.2.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>smtp</artifactId>
            <version>1.6.0</version>
        </dependency>
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.0</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.24.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ru.yandex.qatools.ashot</groupId>
            <artifactId>ashot</artifactId>
            <version>1.5.4</version>
        </dependency>
        <dependency>
            <groupId>com.neovisionaries</groupId>
            <artifactId>nv-i18n</artifactId>
            <version>1.29</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>5.2.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.3</version>
        </dependency>
        <dependency>
            <groupId>com.darwinsys</groupId>
            <artifactId>hirondelle-date4j</artifactId>
            <version>1.5.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents.core5</groupId>
            <artifactId>httpcore5</artifactId>
            <version>5.2.1</version>
        </dependency>


    </dependencies>

    <profiles>
        <profile>
            <id>sprint</id>
            <properties>
                <env>sprint</env>
            </properties>
        </profile>
        <profile>
            <id>sprint1</id>
            <properties>
                <env>sprint1</env>
            </properties>
        </profile>
        <profile>
            <id>sprint2</id>
            <properties>
                <env>sprint2</env>
            </properties>
        </profile>
        <profile>
            <id>regression</id>
            <properties>
                <env>regression</env>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>sprint3</id>
            <properties>
                <env>sprint3</env>
            </properties>
        </profile>
        <profile>
            <id>sprint4</id>
            <properties>
                <env>sprint4</env>
            </properties>
        </profile>
        <profile>
            <id>sprint5</id>
            <properties>
                <env>sprint5</env>
            </properties>
        </profile>
        <profile>
            <id>sprint6</id>
            <properties>
                <env>sprint6</env>
            </properties>
        </profile>
        <profile>
            <id>sprint7</id>
            <properties>
                <env>sprint7</env>
            </properties>
        </profile>
        <profile>
            <id>nightly</id>
            <properties>
                <env>nightly</env>
            </properties>
        </profile>
        <profile>
            <id>skoda-ms-staging</id>
            <properties>
                <env>skoda-ms-staging</env>
            </properties>
        </profile>
        <profile>
            <id>edwards-staging</id>
            <properties>
                <env>edwards-staging</env>
            </properties>
        </profile>
        <profile>
            <id>tenant-sprint1</id>
            <properties>
                <env>tenant-sprint1</env>
            </properties>
        </profile>
        <profile>
            <id>integration-sandbox</id>
            <properties>
                <env>integration-sandbox</env>
            </properties>
        </profile>
        <profile>
            <id>tenant2-qa-regression</id>
            <properties>
                <env>tenant2-qa-regression</env>
            </properties>
        </profile>
    </profiles>

    <build>
        <filters>
            <filter>src/test/resources/env/${env}/config.properties</filter>
        </filters>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <parallel>classes</parallel>
                    <threadCount>1</threadCount>
                    <failIfNoTests>false</failIfNoTests>
                    <reportsDirectory>${project.build.directory}/jsonreports</reportsDirectory>
                    <testFailureIgnore>true</testFailureIgnore>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/suiterunner/rutafbddrunner.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>5.3.0</version>
                <executions>
                    <execution>
                        <id>execution</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>RUTAF-BDD</projectName>  <!-- Replace with project name -->
                            <inputDirectory>${project.build.directory}/jsonreports</inputDirectory>
                            <jsonFiles>
                                <param>**/*.json</param>
                            </jsonFiles>
                            <outputDirectory>target/cucumber-html-reports</outputDirectory>
                            <buildNumber>1</buildNumber>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.trivago.rta</groupId>
                <artifactId>cluecumber-report-plugin</artifactId>
                <version>2.5.0</version>
                <executions>
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>reporting</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <sourceJsonReportDirectory>${project.build.directory}/jsonreports</sourceJsonReportDirectory>
                    <generatedHtmlReportDirectory>${project.build.directory}/cluecucumber-html-report
                    </generatedHtmlReportDirectory>
                    <expandDocStrings>true</expandDocStrings>
                    <startPage>ALL_SCENARIOS</startPage>
                    <customPageTitle>RUTAF-BDD</customPageTitle>
                    <expandStepHooks>true</expandStepHooks>
                    <expandDocStrings>true</expandDocStrings>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5</version>
                <executions>
                    <execution>
                        <id>install1</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>install-file</goal>
                        </goals>

                        <configuration>
                            <groupId>com.github.ralfstuckert.pdfbox-layout</groupId>
                            <artifactId>pdfbox2-layout</artifactId>
                            <version>1.0.0</version>
                            <packaging>jar</packaging>
                            <file>lib/pdfbox2-layout-1.0.0.jar</file>
                        </configuration>
                    </execution>
                    <execution>
                        <id>install2</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <configuration>
                            <groupId>com.refinitiv.asts</groupId>
                            <artifactId>RUTAF-BDD</artifactId>
                            <version>${rutaf.version}</version>
                            <packaging>jar</packaging>
                            <file>lib/RUTAF-BDD-${rutaf.version}.jar</file>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <filtering>true</filtering><!-- if it is neccessary -->
                <directory>${project.build.directory}/surefire-reports</directory><!--
					from -->
                <targetPath>${project.build.directory}/jsonreports</targetPath><!-- to -->
                <includes><!-- what -->
                    <include>**/*.json</include>
                </includes>
            </resource>
            <resource>
                <directory>src/test/resources/extent-reports</directory>
            </resource>
            <resource>
                <filtering>true</filtering>
                <directory>src/test/resources/env/${env}</directory>
            </resource>
        </resources>
    </build>


</project>
